test(INCOME-1961): add test to increment coverage